Fixed song view overflow

--- a/src/renderer/components/inputSearch/inputSearch.scss
+++ b/src/renderer/components/inputSearch/inputSearch.scss
@@ -7,5 +7,9 @@
 
   > input {
     flex-grow: 1;
+
+    &::placeholder {
+      color: var(--hover);
+    }
   }
 }
