--- a/src/renderer/components/virtualList/virtualList.scss
+++ b/src/renderer/components/virtualList/virtualList.scss
@@ -7,6 +7,7 @@
 
     > li {
       position: absolute;
+      width: 100%;
     }
   }
 }
